RESOLVED FIXED96464
IncrementalSweeper should not sweep/free Zapped blocks
https://bugs.webkit.org/show_bug.cgi?id=96464
Summary IncrementalSweeper should not sweep/free Zapped blocks
Mark Hahnenberg
Reported 2012-09-11 20:10:47 PDT
This is not beneficial in terms of performance, and since don't take zapped-ness into account when determining whether or not a block is empty to free it, it unintentionally causes pre-mature freeing of blocks.
Attachments
Patch (1.69 KB, patch)
2012-09-11 20:16 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2012-09-11 20:12:56 PDT
This was a regression introduced in http://trac.webkit.org/changeset/121316.
Mark Hahnenberg
Comment 2 2012-09-11 20:16:31 PDT
WebKit Review Bot
Comment 3 2012-09-11 21:25:54 PDT
Comment on attachment 163505 [details] Patch Clearing flags on attachment: 163505 Committed r128262: <http://trac.webkit.org/changeset/128262>
WebKit Review Bot
Comment 4 2012-09-11 21:25:57 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2012-09-12 13:56:33 PDT
*** Bug 95516 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.